Fix bug on scrollbar hide

--- a/chat/static/chat/scss/style.scss
+++ b/chat/static/chat/scss/style.scss
@@ -791,6 +791,6 @@ div#aside-bg {
     background-repeat: no-repeat;
  }
 
-::webkit-scrollbar {
+::-webkit-scrollbar {
 	display: none;
 }
